# injir

./: .gitignore  CMakeLists.txt
lib/: CMakeLists.txt
lib/analysis/: lifetime.hpp  loop.hpp  regalloc.hpp
lib/cfg_analysis/: dfs.hpp  dom.hpp  lifetime.hpp  loop.hpp  rpo.hpp
lib/graph/: dfs.hpp  dom.hpp  rpo.hpp
lib/ir/: basic_block.hpp  builder.hpp  common.hpp  context.hpp  function.hpp  instr.hpp  type.hpp  value.hpp
lib/pass/: check_elimination.hpp  common.hpp  constant_folding.hpp  inline.hpp  peephole.hpp
tests/: CMakeLists.txt  factorial.cpp  fixtures.hpp
tests/analysis/: CMakeLists.txt  lifetime.cpp  loop.cpp  regalloc.cpp
tests/cfg_analysis/: CMakeLists.txt  dfs.cpp  dom.cpp  fixtures.hpp  lifetime.cpp  loop.cpp  rpo.cpp
tests/graph/: CMakeLists.txt  dfs.cpp  dom.cpp  rpo.cpp
tests/pass/: CMakeLists.txt  check_elimination.cpp  constant_folding.cpp  inline.cpp  peephole.cpp
